# amadeus-voice-assistant

./: .env.example  .gitignore  LICENSE  README.md  demo_emotional_tts.py  pyproject.toml  requirements.txt  view_audit_history.py
amadeus/: __init__.py
amadeus/adapters/os/: __init__.py  base.py  factory.py  linux.py  windows.py
amadeus/adapters/persistence/: __init__.py  audit.py
amadeus/adapters/voice/: __init__.py  asr.py  audio_input.py  nlu.py  tts.py  wake_word.py
amadeus/app/: __init__.py  executor.py  main.py  pipeline.py
amadeus/core/: __init__.py  config.py  entities.py  planner.py  policy.py  ports.py  state_machine.py
data/: .gitkeep
docs/: architecture.md  security.md
models/wake_words/: amadeus_en_windows_v3_0_0.ppn
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_entities.py  test_nlu.py  test_state_machine.py  test_voice_adapters.py
