[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amadeus-voice-assistant"
version = "0.1.0"
description = "Privacy-first, local-by-default PC Voice Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Amadeus Team"}
]
keywords = ["voice-assistant", "privacy", "local", "clean-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]

dependencies = [
    "dataclasses-json>=0.6.3",
    "typing-extensions>=4.9.0",
    "vosk>=0.3.45",
    "pvporcupine>=3.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "PyQt5>=5.15.10",
    "sqlalchemy>=2.0.25",
    "cryptography>=41.0.7",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "mypy>=1.8.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]
research = [
    "matplotlib>=3.8.2",
    "pandas>=2.1.4",
]

[project.scripts]
amadeus = "amadeus.app.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/amadeus-voice-assistant"
Documentation = "https://github.com/yourusername/amadeus-voice-assistant/docs"
Repository = "https://github.com/yourusername/amadeus-voice-assistant"

[tool.setuptools.packages.find]
where = ["."]
include = ["amadeus*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "vosk.*",
    "pvporcupine.*",
    "sounddevice.*",
    "PyQt5.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | env
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".git", ".mypy_cache", ".venv", "env", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["amadeus"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
